09 Admin/Terminal Saved Chats/Terminal Saved Output3.txt
Last login: Fri May  1 01:01:19 on ttys000
jd@JD-MacBook-Pro ~ % cd '/Users/jd/Medical School/09 Admin/Update Log/<0001f7e6> Loved Previous Build/v0.02/v0.02.01 - Schedule Atlas Visual Timeline/CHANGELOG - 2026-04-30_15-52-00.md'
cd: not a directory: /Users/jd/Medical School/09 Admin/Update Log/\U0001f7e6 Loved Previous Build/v0.02/v0.02.01 - Schedule Atlas Visual Timeline/CHANGELOG - 2026-04-30_15-52-00.md
jd@JD-MacBook-Pro ~ % ls medical school
ls: medical: No such file or directory
ls: school: No such file or directory
jd@JD-MacBook-Pro ~ % LS /medical school
LS: /medical: No such file or directory
LS: school: No such file or directory
jd@JD-MacBook-Pro ~ % ls /home/Medical School
ls: /home/Medical: No such file or directory
ls: School: No such file or directory
jd@JD-MacBook-Pro ~ % ls /jd/Medical School
ls: /jd/Medical: No such file or directory
ls: School: No such file or directory
jd@JD-MacBook-Pro ~ % ls '/Users/jd/Medical School'
00 📥 Inbox - Need Work Look Over	06 📊 Summaries and Sheets
01 BPM 500				07 Personal Med
01 BPM 501				08 Drives and External
02 PPM500				09 Admin
02 PPM501				10 Courses
02 PPM502				10 Prompt Library
03 🧠 STEP 1				99 🗄️ Archives
04 🃏 Anki Decks			ANKI Decks
05 🔬 Research				Medical School
jd@JD-MacBook-Pro ~ % cs '/Users/jd/Medical School'
zsh: command not found: cs
jd@JD-MacBook-Pro ~ % cd '/Users/jd/Medical School'
jd@JD-MacBook-Pro Medical School % >....                                        
source "$HOME/.zshrc"

echo ""
echo "===== BUILDING NOW ====="
"$BUILD_SCRIPT"

echo ""
echo "Done."
echo ""
echo "Permanent logo:"
echo "$LOGO_DEST"
echo ""
echo "Permanent icon:"
echo "$ICNS"
echo ""
echo "Installed app:"
echo "$DEST_APP"
echo ""
echo "Commands:"
echo "noctbuild     # rebuild Noctyrium into /Applications"
echo "noctapp       # open Noctyrium"
echo "noctbrand     # open logo/icon folder"
echo "noctframework # open app framework folder"
===== NOCTYRIUM NAME + LOGO + /APPLICATIONS BUILD PATCH =====

===== COPYING LOGO INTO ADMIN BRAND DIRECTORY =====
Logo copied to:
/Users/jd/Medical School/09 Admin/App Data/Noctyrium/Brand/Noctyrium Logo.png

===== BUILDING ICNS ICON =====
Icon created:
/Users/jd/Medical School/09 Admin/App Data/Noctyrium/Brand/Noctyrium.icns

===== PATCHING SWIFT DISPLAY NAME =====
Swift source patched.
Backup saved:
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.noctyrium-name-logo-backup.2026-05-01_10-48-09.swift

===== WRITING NOCTYRIUM BUILD SCRIPT =====
Build script created:
/Users/jd/Medical School/09 Admin/App Framework/build_noctyrium_app.sh

===== ADDING TERMINAL COMMANDS =====

===== BUILDING NOW =====
===== BUILDING NOCTYRIUM =====

Compile:
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:759:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2396:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2400:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Creating Info.plist:
Icon installed:
/Users/jd/Medical School/09 Admin/App Data/Noctyrium/Brand/Noctyrium.icns

Installing to /Applications:

Built and installed:
/Applications/Noctyrium.app

Done.

Permanent logo:
/Users/jd/Medical School/09 Admin/App Data/Noctyrium/Brand/Noctyrium Logo.png

Permanent icon:
/Users/jd/Medical School/09 Admin/App Data/Noctyrium/Brand/Noctyrium.icns

Installed app:
/Applications/Noctyrium.app

Commands:
noctbuild     # rebuild Noctyrium into /Applications
noctapp       # open Noctyrium
noctbrand     # open logo/icon folder
noctframework # open app framework folder
jd@JD-MacBook-Pro Medical School % >....                                        
dock.write_bytes(plistlib.dumps(data))
subprocess.run(["killall", "Dock"], stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)
PY

echo ""
echo "Built staging copy:"
echo "$STAGE_APP"

echo ""
echo "Installed active app:"
echo "$DEST_APP"

echo ""
echo "Noctyrium rebuild complete."
EOF

chmod +x "$BUILD_SCRIPT"

echo "Updated:"
echo "$BUILD_SCRIPT"

"$BUILD_SCRIPT"
Updated:
/Users/jd/Medical School/09 Admin/App Framework/build_noctyrium_app.sh
===== NOCTYRIUM FULL REBUILD =====

Closing open Noctyrium session...

Removing old Dock pin if present...

Preparing staging build copy:
/Users/jd/Medical School/09 Admin/App Framework/Build/Noctyrium.app

Compiling Swift source...
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:759:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2396:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2400:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Writing Info.plist...
Icon installed from:
/Users/jd/Medical School/09 Admin/App Data/Noctyrium/Brand/Noctyrium.icns

Removing old app from /Applications...

Installing fresh app to:
/Applications/Noctyrium.app

Opening Noctyrium...

Pinning Noctyrium to Dock...

Built staging copy:
/Users/jd/Medical School/09 Admin/App Framework/Build/Noctyrium.app

Installed active app:
/Applications/Noctyrium.app

Noctyrium rebuild complete.
jd@JD-MacBook-Pro Medical School % >....                                        
echo "===== COMPILE TEST ====="
swiftc "$SRC" \
  -parse-as-library \
  -o /tmp/NoctyriumSuggestionTest \
  -framework SwiftUI \
  -framework AppKit

if [ $? -ne 0 ]; then
  echo ""
  echo "Compile failed. Paste the errors."
  exit 1
fi

echo ""
echo "Compile passed."

echo ""
echo "===== REBUILDING NOCTYRIUM ====="
"$BASE/09 Admin/App Framework/build_noctyrium_app.sh"

echo ""
echo "Backup saved:"
echo "$BACKUP"

===== COMPILE TEST =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:218:38: error: extra arguments at positions #10, #11 in call
                    CourseTrackerPage(
                                     ^
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1066:8: note: 'init(items:bsceItems:selectedTrackerFile:base:open:refreshData:updateItem:updateBSCEItem:addPractice:)' declared here
struct CourseTrackerPage: View {
       ^
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:810:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1311:34: error: cannot find 'suggestions' in scope
                    suggestions: suggestions,
                                 ^~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1313:30: error: cannot find 'refreshSuggestions' in scope
                    refresh: refreshSuggestions
                             ^~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2264:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2844:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2848:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Compile failed. Paste the errors.

Saving session...
...copying shared history...
...saving history...truncating history files...
...completed.

[Process completed]

